--- a/frontend/tasks/main.yaml
+++ b/frontend/tasks/main.yaml
@@ -25,8 +25,9 @@
 
 - name: Download the frontend content
   ansible.builtin.unarchive:
-    url: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
+    src: https://roboshop-artifacts.s3.amazonaws.com/frontend-v3.zip
     dest: /usr/share/nginx/html
+    remote_src: yes
 
 - name: Copy the nginx config file
   ansible.builtin.template:
